--- a/index.html
+++ b/index.html
@@ -134,6 +134,83 @@
           </li>
         </ul>
       </section>
+
+      <section class="port-cont">
+        <h2 class="port-title">Our Portfolio</h2>
+        <ul>
+          <li class="port-item">
+            <img
+              src="./images/img-4.jpg"
+              width="360"
+              height="300"
+              alt="Banking App"
+              class="port-item-img"
+            />
+            <h3 class="port-item-title">Banking App</h3>
+            <p class="port-item-descr">App</p>
+          </li>
+
+          <li class="port-item">
+            <img
+              src="./images/img-5.jpg"
+              width="360"
+              height="300"
+              class="port-item-img"
+              alt="Cashless Payment"
+            />
+            <h3 class="port-item-title">Cashless Payment</h3>
+            <p class="port-item-descr">Marketing</p>
+          </li>
+
+          <li class="port-item">
+            <img
+              src="./images/img-6.jpg"
+              width="360"
+              height="300"
+              class="port-item-img"
+              alt="Meditation App"
+            />
+            <h3 class="port-item-title">Meditation App</h3>
+            <p class="port-item-descr">App</p>
+          </li>
+
+          <li class="port-item">
+            <img
+              src="./images/img-7.jpg"
+              width="360"
+              height="300"
+              class="port-item-img"
+              alt="Taxi Service"
+            />
+            <h3 class="port-item-title">Taxi Service</h3>
+            <p class="port-item-descr">Marketing</p>
+          </li>
+
+          <li class="port-item">
+            <img
+              src="./images/img-8.jpg"
+              width="360"
+              height="300"
+              class="port-item-img"
+              alt="Screen Illustrations"
+            />
+            <h3 class="port-item-title">Screen Illustrations</h3>
+            <p class="port-item-descr">Design</p>
+          </li>
+
+          <li class="port-item">
+            <img
+              src="./images/img-9.jpg"
+              width="360"
+              height="300"
+              class="port-item-img"
+              alt="Online Courses"
+            />
+            <h3 class="port-item-title">Online Courses</h3>
+            <p class="port-item-descr">Marketing</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer class="footer-cont">
       <a class="logo" href="./index.html"
